# recsys_apparel

./: .gitignore  README.md  pyproject.toml  setup.sh  solution.ipynb
auxiliary/ipynb/: CategoryTree.ipynb  gen_R_2.ipynb  log_reg.ipynb  make_prediction.ipynb  pipeline.ipynb
raw/calculated_data/: models_results.txt
raw/ipynb/: train_coef_for_mat_R.ipynb
