[tool.poetry]
name = "recsys-ozon-ecup-2025"
version = "0.1.0"
description = "RecSys pipeline (logs - weights - R-matrix - ALS - candidates - submission)"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

numpy = "^1.26"
pandas = "^2.2.2"
polars = "^1.5.0"
pyarrow = "^16.1.0"

matplotlib = "^3.9.0"
seaborn = "^0.13.2"

tqdm = "^4.66.0"
joblib = "^1.4.2"

scipy = "^1.13.0"
scikit-learn = "^1.5.0"
catboost = "^1.2.5"
implicit = "^0.7.2"

jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.2"
jupytext = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
